force-app/main/default/objects/TestForCC__c/TestForCC__c.object-meta.xml
<CustomObject>
    <label>TestForCC</label>
    <nameField>
        <label>TestForCC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TestForCCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>