force-app/main/default/objects/TestForCC__c/fields/AutoNumberField__c.field-meta.xml
<CustomField>
    <fullName>AutoNumberField__c</fullName>
    <label>AutoNumberField</label>
    <type>AutoNumber</type>
</CustomField>