force-app/main/default/objects/TestForCC__c/fields/formulaTest__c.field-meta.xml
<CustomField>
    <fullName>formulaTest__c</fullName>
    <formula>&apos;kek&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>formulaTest</label>
    <type>Text</type>
</CustomField>