force-app/main/default/objects/TestForCC__c/fields/RollUp__c.field-meta.xml
<CustomField>
    <fullName>RollUp__c</fullName>
    <label>RollUp</label>
    <summaryForeignKey>AGromObject__c.TestForCC__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>