force-app/main/default/objects/TestForCC__c/fields/TextBig__c.field-meta.xml
<CustomField>
    <fullName>TextBig__c</fullName>
    <label>TextBig</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>