force-app/main/default/objects/TestForCC__c/fields/tt2__c.field-meta.xml
<CustomField>
    <fullName>tt2__c</fullName>
    <label>tt2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>