force-app/main/default/objects/TestForCC__c/fields/tt3__c.field-meta.xml
<CustomField>
    <fullName>tt3__c</fullName>
    <label>tt3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>